Overlay scrollbars are painted onload.

I fixed the AdjustScale function to keep the values within a valid range. Now, when it is called during LayerImpl::PushPropertiesTo, the temporarily invalid scrollbar->Opacity() doesn't set the opacity to zero.

The tests fails before applying this patch, and passes on this patch.

BUG=635629
TEST=ScrollbarAnimationControllerThinningTest.AppearOnResize
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_precise_blink_rel

Review-Url: https://codereview.chromium.org/2345823003
Cr-Commit-Position: refs/heads/master@{#421910}

Former-commit-id: 38991f06ebb579440a3bf3f3fbb8792a60b610d4